k8s-specifications/task-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: shourya24/task-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
            tcpSocket:
              port: 8081
          readinessProbe:
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 3
            tcpSocket:
              port: 8081
      restartPolicy: Always
