k8s-specifications/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres-db
  name: db-service
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: postgres-db
