k8s-specifications/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: Taskflowx
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
