k8s-specifications/task-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: Taskflowx
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
